--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
 PyJWT==2.10.1
+python-dotenv==1.1.0
 requests==2.32.4
 six==1.17.0
 sniffio==1.3.1
